Fix logo colors for light and dark modes

--- a/styles/head.scss
+++ b/styles/head.scss
@@ -15,11 +15,9 @@
   }
 
   &__background {
-    color: $block-bg-color;
-    fill: $block-bg-color;
+    fill: #fff;
     @media (prefers-color-scheme: dark) {
-      color: $block-bg-color-dark;
-      fill: $block-bg-color-dark;
+      fill: #333;
     }
   }
 }
